--- a/MyHabits/Base.lproj/Main.storyboard
+++ b/MyHabits/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
             </objects>
             <point key="canvasLocation" x="2392.753623188406" y="347.54464285714283"/>
         </scene>
-        <!--Привычки-->
+        <!--Habits View Controller-->
         <scene sceneID="Z23-i6-zex">
             <objects>
                 <viewController id="hRP-Wg-0ty" customClass="HabitsViewController" customModule="MyHabits" customModuleProvider="target" sceneMemberID="viewController">
@@ -34,11 +34,26 @@
                         <viewLayoutGuide key="safeArea" id="TaX-zh-UDE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Привычки" image="list.triangle" catalog="system" selectedImage="list.triangle" id="3CY-xp-npJ"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="BWH-Kg-SVQ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZFQ-Ea-F1W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1485" y="-368"/>
+            <point key="canvasLocation" x="2394.202898550725" y="-368.30357142857139"/>
+        </scene>
+        <!--Habit View Controller-->
+        <scene sceneID="6h5-93-WH8">
+            <objects>
+                <viewController storyboardIdentifier="HabitVC" id="cIB-Ka-9an" customClass="HabitViewController" customModule="MyHabits" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YMp-c6-hPO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="njB-ac-j0n"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ltj-Xe-sc3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3345" y="-368"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ELe-1p-t4c">
@@ -51,7 +66,7 @@
                         <color key="selectedImageTintColor" red="0.63137254899999995" green="0.086274509799999996" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="hRP-Wg-0ty" kind="relationship" relationship="viewControllers" id="Qqn-n7-MFW"/>
+                        <segue destination="clg-sX-fLz" kind="relationship" relationship="viewControllers" id="Qqn-n7-MFW"/>
                         <segue destination="Zko-KI-5Y8" kind="relationship" relationship="viewControllers" id="xM8-X8-yvd"/>
                     </connections>
                 </tabBarController>
@@ -78,10 +93,33 @@
             </objects>
             <point key="canvasLocation" x="1482.608695652174" y="347.54464285714283"/>
         </scene>
+        <!--Привычки-->
+        <scene sceneID="6vO-He-Ilh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="clg-sX-fLz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Привычки" image="list.triangle" catalog="system" selectedImage="rectangle.grid.1x2.fill" id="3CY-xp-npJ"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KrF-rh-9it">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fBG-6D-igY">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="hRP-Wg-0ty" kind="relationship" relationship="rootViewController" id="aNn-KD-i4f"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XeS-VO-fGI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1484.057971014493" y="-368.30357142857139"/>
+        </scene>
     </scenes>
     <resources>
         <image name="info.circle.fill" catalog="system" width="128" height="121"/>
         <image name="list.triangle" catalog="system" width="128" height="91"/>
+        <image name="rectangle.grid.1x2.fill" catalog="system" width="128" height="101"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
