--- a/MyHabits/Base.lproj/Main.storyboard
+++ b/MyHabits/Base.lproj/Main.storyboard
@@ -25,6 +25,22 @@
             </objects>
             <point key="canvasLocation" x="2392.753623188406" y="347.54464285714283"/>
         </scene>
+        <!--Habit Details View Controller-->
+        <scene sceneID="QAR-xh-319">
+            <objects>
+                <viewController storyboardIdentifier="HabitDetailsVC" id="btu-rO-S1m" customClass="HabitDetailsViewController" customModule="MyHabits" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="O9v-tY-HDh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="dTS-RR-jNV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Rk5-Ty-fz0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hFD-8x-w8h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2394" y="-1047"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Mef-MT-tXu">
             <objects>
@@ -55,7 +71,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ltN-g7-kR5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4200" y="-1046"/>
+            <point key="canvasLocation" x="4200" y="-1047"/>
         </scene>
         <!--Habits View Controller-->
         <scene sceneID="Z23-i6-zex">
@@ -166,6 +182,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C9l-GP-PJ7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3355" y="-368"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="SGb-3b-q6T">
+            <objects>
+                <navigationController storyboardIdentifier="HabitDetailsNavVC" automaticallyAdjustsScrollViewInsets="NO" id="wSq-lT-fVs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6YN-lF-PlP">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="btu-rO-S1m" kind="relationship" relationship="rootViewController" id="7Hy-py-Jjb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WPP-7S-2dl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1484" y="-1047"/>
         </scene>
     </scenes>
     <resources>
