--- a/MyHabits/Base.lproj/Main.storyboard
+++ b/MyHabits/Base.lproj/Main.storyboard
@@ -41,38 +41,6 @@
             </objects>
             <point key="canvasLocation" x="2394" y="-1047"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Mef-MT-tXu">
-            <objects>
-                <navigationController storyboardIdentifier="EditHabitNavVC" id="wJg-e4-Hnj" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aN7-Ie-vB8">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="kIl-uZ-uO1" kind="relationship" relationship="rootViewController" id="oqo-Ox-uCg"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UzV-x8-rYV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3354" y="-1047"/>
-        </scene>
-        <!--Edit Habit View Controller-->
-        <scene sceneID="Sh3-n2-RR0">
-            <objects>
-                <viewController storyboardIdentifier="EditHabit" id="kIl-uZ-uO1" customClass="EditHabitViewController" customModule="MyHabits" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="UHP-Dj-R11">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="0vx-mx-8AJ"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="qHB-qm-Kdm"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ltN-g7-kR5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="4200" y="-1047"/>
-        </scene>
         <!--Habits View Controller-->
         <scene sceneID="Z23-i6-zex">
             <objects>
@@ -89,10 +57,10 @@
             </objects>
             <point key="canvasLocation" x="2394.202898550725" y="-368.30357142857139"/>
         </scene>
-        <!--Add New Habbit View Controller-->
+        <!--Habit View Controller-->
         <scene sceneID="6h5-93-WH8">
             <objects>
-                <viewController storyboardIdentifier="NewHabit" id="cIB-Ka-9an" customClass="AddNewHabbitViewController" customModule="MyHabits" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NewHabit" id="cIB-Ka-9an" customClass="HabitViewController" customModule="MyHabits" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YMp-c6-hPO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
